--- a/index.html
+++ b/index.html
@@ -6,31 +6,72 @@
     <title>Zelda</title>
     <link rel="stylesheet" href="style.css">
     <script src="min.js" defer></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
     <header>
-        <h1>The Legend of Zelda: Breath of the Wild</h1>
+        <figure class="main-logo">
+            <img src="zelda_logo.png" alt="">
+        </figure>
     </header>
     <nav>
-        <ul>
-            <li>Home</li>
-            <li>Features</li>
-            <li>Amiibo</li>
-            <li>Media</li>
-            <li>DLC</li>
-            <li>Buy Now!</li>
-        </ul>
+        <section class="desktop">
+            <ul id="links-desktop">
+                <li>Home</li>
+                <li>Features</li>
+                <li>Amiibo</li>
+                <li>Media</li>
+                <li>DLC</li>
+                <li>Buy Now!</li>
+            </ul>
+        </section>
+        <section class="mobile">
+            <div class="mobile-head">
+                <i class="fa fa-bars" id="humburger-mark"></i>
+                <i class="fa-solid fa-xmark" id="close-mark"></i>
+                <img src="swich_logo.png">
+            </div>
+            <ul id="links-mobile">
+                <li>Home</li>
+                <li>Features</li>
+                <li>Amiibo</li>
+                <li>Media</li>
+                <li>DLC</li>
+                <li class="attention">Buy Now!</li>
+            </ul>
+        </section>
     </nav>
     <section class="main-info">
-        <article>
-            <figure>
-                <img src="botw_img.jpeg" alt="">
+        <article class="slideshow">
+            <figure class="slide">
+                <img src="botw_1.jpeg" alt="">
+            </figure>
+            <figure class="slide">
+                <img src="botw_2.jpeg" alt="">
+            </figure>
+            <figure class="slide">
+                <img src="botw_3.jpeg" alt="">
             </figure>
         </article>
-        <article>
-            <h2>
-                The Legend of Zelda: Breath of the Wild is a 2017 action-adventure game developed and published by Nintendo for the Nintendo Switch and Wii U. Set at the end of the Zelda timeline, the player controls an amnesiac Link as he sets out to save Princess Zelda and prevent Calamity Ganon from destroying the world. Players explore the open world of Hyrule while they collect items and complete objectives such as puzzles or side quests. Breath of the Wild's world is unstructured and encourages exploration and experimentation; the story can be completed in a nonlinear fashion.
-            </h2>
+        <article class="trailer">
+            <h1>Watch the trailer</h1>
+            <iframe src="https://www.youtube.com/embed/1rPxiXXxftE" width="400" height="300" title="The Legend of Zelda: Breath of the Wild - Official Game Trailer - Nintendo E3 2016" frameborder="0" allowfullscreen></iframe>
+            </iframe>            
+        </article>
+        <article class="about">
+            <section class="title">
+                <h1>Features</h1>
+            </section>
+            <h2>Open your eyes</h2>
+            <h3 class="description">
+                No kingdom. No memories. After a 100-year slumber, Link wakes up alone in a world he no longer remembers. Now the legendary hero must explore a vast and dangerous land and regain his memories before Hyrule is lost forever.
+
+Armed only with what he can scavenge, Link sets out to find answers and the resources needed to survive.    
+            </h3>
+            <div class="img-container">
+                    <img src="sheikah-bg.png" alt="" id="sheikah-bc">
+                    <img src="sheikah.png" alt="" id="sheikah">
+            </div>
         </article>
     </section>
     
