--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <figure class="main-logo">
-            <img src="zelda_logo.png" alt="">
+            <img src="zelda_logo.png" alt="The Legend of Zelda: Breath of the Wild - Logo">
         </figure>
     </header>
     <nav>
@@ -44,13 +44,13 @@
     <section class="main-info">
         <article class="slideshow">
             <figure class="slide">
-                <img src="botw_1.jpeg" alt="">
+                <img src="botw_1.jpeg" alt="The Legend of Zelda: Breath of the Wild - Wallpaper">
             </figure>
             <figure class="slide">
-                <img src="botw_2.jpeg" alt="">
+                <img src="botw_2.jpeg" alt="The Legend of Zelda: Breath of the Wild - Wallpaper">
             </figure>
             <figure class="slide">
-                <img src="botw_3.jpeg" alt="">
+                <img src="botw_3.jpeg" alt="The Legend of Zelda: Breath of the Wild - Wallpaper">
             </figure>
         </article>
         <article class="trailer">
@@ -69,8 +69,48 @@
 Armed only with what he can scavenge, Link sets out to find answers and the resources needed to survive.    
             </h3>
             <div class="img-container">
-                    <img src="sheikah-bg.png" alt="" id="sheikah-bc">
-                    <img src="sheikah.png" alt="" id="sheikah">
+                    <img src="sheikah-bg.png" alt="Sheikah Slate" id="sheikah-bc">
+                    <img src="sheikah.png" alt="Sheikah Slate" id="sheikah">
+            </div>
+            <div class="snippets">
+                <iframe src="https://www.youtube.com/embed/cw3akgio5Vc" width="400" height="300" title="Exploring BEYOND Hyrule's Map! | Zelda: Breath of the Wild" frameborder="0" allowfullscreen></iframe>
+                <h2>Explore Hyrule</h2>
+                <h3>
+                    The Sheikah Slate features a map of Hyrule to guide Link’s journey. It also has a scope to identify points of interest from a distance.
+                </h3>
+                <iframe src="https://www.youtube.com/embed/Trh4UbnBvJA" width="400" height="300" title="A YouTube video" frameborder="0" allowfullscreen></iframe>
+                <h2>Download runess</h2>
+                <h3>
+                    In certain Shrines, Link can download Runes to learn new abilities to help solve puzzles and unlock secret areas.
+                </h3>
+                <img src="screen_Inventory.jpeg" alt="Get Organized">
+                <h2>Get organized</h2>
+                <h3>
+                    Link can manage his adventure with the Sheikah Slate, using the Inventory to organize items and tracking quests in the Adventure Log.
+                </h3>
+                <h2>Discover the vast world around you</h2>
+                <h3>Explore the landscape of Hyrule any way you like. Climb up towers and mountain peaks in search of new destinations, then set your own path and plunge into the wilderness.</h3>
+                <img src="screen_towers.jpeg" alt="Towers">
+                <h2>Towers</h2>
+                <h3>
+                    Before Link ventures out into the wild, he can climb to the top of a tower to survey the land.
+                </h3>
+                <img src="screen_Shrines.jpeg" alt="Shrines">
+                <h2>Shrines</h2>
+                <h3>
+                    There are more than 100 Shrines of Trials scattered throughout Hyrule. Link must solve the puzzles inside to prove his heroism and earn in-game rewards.
+                </h3>
+                <img src="screen_villages.jpeg" alt="Villages">
+                <h2>Villages</h2>
+                <h3>
+                    Link visits many different villages on his journey, each with a unique look and feel.
+                </h3>
+                <img src="screen_stables.jpeg" alt="Stables">
+                <h2>Stables</h2>
+                <h3>
+                    Stables aren’t just for horses anymore. Link can also rest there to restore his health or prepare food or Elixirs before his next adventure.
+                </h3>
+                <div class="arrow-down"></div>
             </div>
         </article>
     </section>
